# mario.scenes

./: .gitattributes  .gitignore  README.md  dataset_description.json  invoke.yaml  pyproject.toml  requirements.txt  requirements_hpc.txt  tasks.py
.datalad/: config
analysis/: mario_plot.ipynb
code/mario_scenes/create_clips/: create_clips.md  create_clips.py
code/mario_scenes/load_data/: load_data.py
code/mario_scenes/make_images/: make_scene_img.py
code/mario_scenes/scenes_analysis/: cluster_scenes.py
notebooks/: mario_plot.ipynb  pattern_annotations.ipynb  pattern_heatmaps.ipynb  select_scenes_from_pattern.ipynb
resources/: README.md  scenes_mastersheet.json  scenes_mastersheet.tsv
sourcedata/scenes/: scenes_mastersheet.csv  scenes_mastersheet.json
src/mario_scenes/clips_extraction/: clips_extraction.py
src/mario_scenes/create_clips/: create_clips.py
src/mario_scenes/load_data/: load_data.md  load_data.py
src/mario_scenes/make_images/: make_scene_img.py  make_scene_img.sh
src/mario_scenes/scenes_analysis/: __init__.py  dimensionality_reduction.py
sub-01/ses-001/beh/infos/: sub-01_ses-001_run-000_level-w1l1_scene-0_clip-00100000000122.json  sub-01_ses-001_run-000_level-w1l1_scene-10_clip-00100000002331.json  sub-01_ses-001_run-000_level-w1l1_scene-10_clip-00100000003476.json  sub-01_ses-001_run-000_level-w1l1_scene-11_clip-00100000002439.json  sub-01_ses-001_run-000_level-w1l1_scene-11_clip-00100000003584.json  sub-01_ses-001_run-000_level-w1l1_scene-13_clip-00100000003676.json  (+519 more)
(+169470 files in other folders)
