[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mario_scenes"
version = "0.1"
dependencies = [
    "tqdm",
    "tqdm_joblib",
    "pandas",
    "numpy",
    "scikit-video",
    "python-pptx",
    "stable-retro",
    "joblib",
    "scipy",
    "seaborn",
    "invoke",
    "umap-learn",
    "scikit-learn",
    "opencv-python",
    "videogames-utils @ git+https://github.com/courtois-neuromod/videogames_utils.git"
]
description = "A set of functions and code to split levels of the game Super Mario Bros. into smaller atomic scenes."
authors = [{name = "Yann Harel"}]
license = {text = "MIT"}

[tool.setuptools.packages.find]
where = ["code"]
